# src/handlers/Web3StorageHandler.ts
@@ -1,15 +1,31 @@
 import { Web3Storage } from "web3.storage";
+import { prisma } from "../prisma/prisma_client";
 
 const token = process.env.WEB3STORAGE_TOKEN || "";
 const client = new Web3Storage({ token: token });
 
-export const store = async (data: Buffer, key: string, extension: string) => {
-    const file = new File([data], `${key}.${extension}`);
+export const store = async (
+    name: string,
+    contentType: string,
+    data: string,
+) => {
+    const buffer = Buffer.from(data);
+    const blob = new Blob([buffer], { type: contentType });
+    const file = new File([blob], name, { type: contentType });
     const cid = await client.put([file]);
-    return cid;
+    return prisma.storage.create({
+        data: {
+            cid: cid,
+            name: name,
+            ipfs: `${cid}.ipfs.w3s.link/${name}`,
+        },
+    });
 };
 
 export const retrieve = async (cid: string) => {
-    const res = await client.get(cid);
-    return res?.files()[0];
+    return prisma.storage.findFirst({
+        where: {
+            cid: cid,
+        },
+    });
 };
